tests/ui/suggestions/suggest-dereferencing-index.stderr
error[E0277]: the type `[{integer}; 3]` cannot be indexed by `&usize`
  --> $DIR/suggest-dereferencing-index.rs:6:42
   |
LL |     let one_item_please: i32 = [1, 2, 3][i];
   |                                          ^ `[{integer}; 3]` cannot be indexed by `&usize`
   |
   = help: the trait `Index<&usize>` is not implemented for `[{integer}; 3]`, which is required by `[{integer}; 3]: Index<_>`
   = help: the following other types implement trait `Index<Idx>`:
             [T; N]
             [T]
   = note: required for `[{integer}]` to implement `Index<&usize>`
   = note: 1 redundant requirement hidden
   = note: required for `[{integer}; 3]` to implement `Index<&usize>`

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0277`.
